--- a/manifest.json
+++ b/manifest.json
@@ -1,16 +1,19 @@
 {
-    "manifest_version": 3,
-    "name": "CraftingChrome",
-    "description": "Cooking Mama -themed Pomodoro timer.",
-    "version": "1.0",
-    "action": {
-      "default_popup": "popup.html",
-      "default_icon": {
-        "128": "assets/icon.png"
-      }
-    },
-    "permissions": ["activeTab"],
-    "icons": {
-      "128": "assets/icon.png"
-    }
+	"manifest_version": 3,
+	"name": "CraftingChrome",
+	"description": "Cooking Mama -themed Pomodoro timer.",
+	"version": "1.0",
+	"action": {
+		"default_popup": "popup.html",
+		"default_icon": {
+			"128": "assets/icon.png"
+		}
+	},
+	"background": {
+		"service_worker": "background.js"
+	},
+	"permissions": ["activeTab", "alarms", "notifications", "storage"],
+	"icons": {
+		"128": "assets/icon.png"
+	}
 }
